<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileCoursesActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birds_of_a_feather"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/stored_courses_display"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:text=""
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/prompt_user_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_course"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/stored_courses_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/course_subject_textview"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/stored_courses_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/course_number_textview"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/course_number"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/stored_courses_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/course_quarter_textview"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/quarter"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/stored_courses_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/course_year_textview"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/stored_courses_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/course_size_textview"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="Class Size:"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/stored_courses_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <EditText
        android:id="@+id/enter_subject"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:inputType="textPersonName"
        android:nextFocusForward="@+id/enter_course_number"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/course_subject_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_subject_textview"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <EditText
        android:id="@+id/enter_course_number"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:nextFocusForward="@+id/enter_quarter"
        app:layout_constraintBottom_toBottomOf="@+id/course_number_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_number_textview"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <Spinner
        android:id="@+id/enter_quarter"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:nextFocusForward="@+id/enter_year"
        app:layout_constraintBottom_toBottomOf="@+id/course_quarter_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_quarter_textview"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <Spinner
        android:id="@+id/enter_year"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:nextFocusForward="@+id/enter_size"
        app:layout_constraintBottom_toBottomOf="@+id/course_year_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_year_textview" />

    <Spinner
        android:id="@+id/enter_size"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:nextFocusForward="@+id/enter_button"
        app:layout_constraintBottom_toBottomOf="@+id/course_size_textview"
        app:layout_constraintLeft_toRightOf="@+id/course_size_textview"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <TextView
        android:id="@+id/error_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24dp"
        android:textAlignment="center"
        android:textColor = "#F00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/enter"
        android:onClick="onEnterButtonClicked"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="onSubmitButtonClicked"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/stored_courses_display" />

<!--    <Button-->
<!--        android:id="@+id/back_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Back"-->
<!--        android:onClick="onBackButtonClicked"-->
<!--        app:layout_constraintVertical_bias="0.95"-->
<!--        app:layout_constraintVertical_bias="0.925"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="@+id/stored_courses_display" />-->
</androidx.constraintlayout.widget.ConstraintLayout>