<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="enter_first_name">Enter Your First Name</string>
    <string name="name_hint">Name</string>
    <string name="app_name">Birds of a Feather</string>
    <string name="name_enter_error">You must enter a name</string>
    <string name="start_button">Start</string>
    <string name="submit">Submit</string>
    <string name="enter">Enter</string>
    <string name="year">Year:</string>
    <string name="quarter">Quarter:</string>
    <string name="course_number">Course Number:</string>
    <string name="subject">Subject:</string>
    <string name="enter_a_course">Enter a Course:</string>
    <string name="birds_of_a_feather">Birds of a Feather</string>
    <string name="go_to_mock_bluetooth">Go to Mock Bluetooth</string>
    <string name="nearby_messages_mock">Nearby Messages Mock</string>
    <string name="enter_message">Enter Message</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="important_make_sure_to_strip_any_extra_new_lines_from_the_pasted_csv">IMPORTANT: make sure to strip any extra new lines from the pasted csv.</string>
    <string name="sign_in_via_google">Sign in via Google</string>
    <string name="image_url">Image URL</string>
    <string name="put_your_image_url_here">Put your image url here!</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="shared_courses">Shared Courses</string>
    <string name="go_back">GO BACK</string>
    <string name="cont">Continue</string>
    <string name="filter">Sort/Filter: </string>

    <string-array name="quarters_array">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer Session I</item>
        <item>Summer Session II</item>
        <item>Special Summer Session</item>
    </string-array>

    <string-array name="quarters_key">
        <item>FA</item>
        <item>WI</item>
        <item>SP</item>
        <item>SS1</item>
        <item>SS2</item>
        <item>SSS</item>
    </string-array>

    <string-array name="years_array">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
    </string-array>

    <string-array name="sizes_array">
        <item>Tiny (&lt;40)</item>
        <item>Small (40-75)</item>
        <item>Medium (75-150)</item>
        <item>Large (150-250)</item>
        <item>Huge (250-400)</item>
        <item>Gigantic (400+)</item>
    </string-array>

    <string-array name="sizes_key">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
        <item>Gigantic</item>
    </string-array>

    <string-array name="filters_array">
        <item>None</item>
        <item>Prioritize Recent</item>
        <item>Prioritize Small Classes</item>
        <item>This Quarter Only</item>
    </string-array>

    <string-array name="filters_key">
        <item>None</item>
        <item>Recent</item>
        <item>Small</item>
        <item>Quarter</item>
    </string-array>


</resources>